[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/SpellMachine.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/SpellMachine/eye.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/SpellMachine/body.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/SpellMachine/aim.png" type="Texture" id=4]
[ext_resource path="res://Entities/SoulJittering.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]

[node name="SpellMachine" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 8
collision_mask = 203
script = ExtResource( 1 )

[node name="KinematicBody2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 11

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -350, -200 )
rect = Rect2( 0, 0, 700, 400 )
process_parent = true
physics_process_parent = true

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Eye" type="Sprite" parent="."]
position = Vector2( 8, 0 )
texture = ExtResource( 2 )

[node name="Aim" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="AimLine" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0, 1, 0.670588, 1 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="SoulJittering" type="Node" parent="."]
script = ExtResource( 5 )

[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
